not found page added

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -27,3 +27,11 @@
    font-weight: 800;
     font-size: 3rem;
 }
+.show-btn{
+    background-color: green;
+    color: white;
+    padding: 8px 12px;
+    margin:20px;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+}
