--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,7 @@
-.container{
-    margin:0 20px;
-    background-color: lightgray;
-    padding: 10px;
-
-    
+.nav-container{
+    background-color: rgb(211, 211, 211);
+    padding: 20px;
+    margin: 0 60px;
 }
 .navBar{
     display:flex ;
@@ -14,6 +12,7 @@
     color: gray;
     text-decoration: none;
     font-weight: 600;
+    font-size: large;
 }
 .navBar img{
     width: 50px;
